added deal section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Garden</title>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Open+Sans:ital,wght@1,800&family=Poppins:ital,wght@0,400;0,500;1,400&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles/flower.css">
+
 </head>
 
 <body>
@@ -23,6 +27,19 @@
         </div>
     </header>
     <!-- header part end  -->
+    <!-- featured section  -->
+    <section>
+        <div class="feature-text">
+            <h2>Our Featured Flowers</h2>
+            <p>It is a long established fact that a reader will be distracted by the <br>readable content of a page when
+                looking at its layout.</p>
+        </div>
+        <div class="feature-flowers">
+            <img src="Flower Asset/" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+    </section>
     <!-- main part start  -->
     <main>
         <div class="middle-part">
@@ -38,14 +55,16 @@
             </div>
         </div>
         <div class="instagram">
-            <h2>Instagram</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, est aliquid consequatur ratione dolorem a.
+            <h2 class="insta-title">Instagram</h2>
+            <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page
+                when
+                looking at its layout.
             </p>
             <div class="insta-images">
-                <img src="Flower Asset/Flower 01.png" alt="">
-                <img src="Flower Asset/Rectangle 4.png" alt="">
-                <img src="Flower Asset/Rectangle 5.png" alt="">
-                <img src="Flower Asset/Rectangle 6.png" alt="">
+                <img class="middle-img" src="Flower Asset/Flower 01.png" alt="">
+                <img class="middle-img" src="Flower Asset/Rectangle 4.png" alt="">
+                <img class="middle-img" src="Flower Asset/Rectangle 5.png" alt="">
+                <img class="middle-img" src="Flower Asset/Rectangle 6.png" alt="">
             </div>
         </div>
         <section class="deal-section">
@@ -61,6 +80,7 @@
             </div>
         </section>
     </main>
+    <!-- footer  -->
     <footer>
         <h2><span>Flower</span>Shop</h2>
         <p>here you'll got fantastic flower, to get this flower dont forget to visti our shop</p>
