added featured section

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <header>
         <div class="banner">
             <div class="banner-description">
-                <h2 class="banner-title">Let's make beautiful flowers a part of your life</h2>
-                <p>if you are in gloomy , a beautiful flowers can cheer up you and it can help to refresh your mind.
-                    there is no one who does not love flower</p>
+                <h2 class="banner-title">Let's make colorful life with beautiful flowers</h2>
+                <p>if you are in gloomy , a beautiful flowers can cheer up you and it can help to refresh your
+                    mind.there is no one who doesn't love flower
+                </p>
                 <button class="shopnow-btn">Shop Now</button>
             </div>
             <div class="flower">
@@ -28,23 +29,67 @@
     </header>
     <!-- header part end  -->
     <!-- featured section  -->
-    <section>
+    <section class="feature-part">
+
         <div class="feature-text">
             <h2>Our Featured Flowers</h2>
-            <p>It is a long established fact that a reader will be distracted by the <br>readable content of a page when
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when
                 looking at its layout.</p>
         </div>
+
         <div class="feature-flowers">
-            <img src="Flower Asset/" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+
+            <div class="feature-images">
+
+                <div class="div-1">
+                    <div class="feature-img-1">
+                        <img class="img-1" src="Flower Asset/pngwing 6.png" alt="">
+                    </div>
+                    <p>pink flower</p>
+                </div>
+
+                <div class="div-1">
+                    <div class="feature-img-2">
+                        <img src="Flower Asset/pngwing 5.png" alt="">
+                    </div>
+                    <p>pink flwoer</p>
+                </div>
+
+                <div class="div-1">
+
+                    <div class="feature-img-3">
+                        <img src="Flower Asset/pngwing 7.png" alt="">
+                    </div>
+                    <p>Yellow flower</p>
+                </div>
+            </div>
+
         </div>
     </section>
+    <!-- features section end  -->
+    <!-- delivery section start  -->
+    <section class="service">
+        <div class="services">
+            <div class="delivery">
+                <img src="Flower Asset/Group 57.png" alt="">
+                <p>Same Day Delivery, Click & Collect</p>
+            </div>
+            <div class="delivery">
+                <img src="Flower Asset/Group 58.png" alt="">
+                <p>Fresh flowers , Local growers</p>
+            </div>
+            <div class="delivery">
+                <img src="Flower Asset/Group 59.png" alt="">
+                <p> 24/7 Free Support</p>
+            </div>
+        </div>
+    </section>
+    <!-- delivery section end  -->
     <!-- main part start  -->
     <main>
         <div class="middle-part">
             <div class="middle-text">
-                <h3 class="middle-part-title">Hot sale! Up To 25% <span>OFf</span></h3>
+                <h3 class="middle-part-title">Hot sale! Up To 25% <span>Off</span></h3>
                 <p class="middle-part-descrition">It is a long established fact that a reader will be distracted by the
                     readable content of a page when
                     looking at its layout.</p>
