--- a/index.html
+++ b/index.html
@@ -45,22 +45,22 @@
                     <div class="feature-img-1">
                         <img class="img-1" src="Flower Asset/pngwing 6.png" alt="">
                     </div>
-                    <p>pink flower</p>
+                    <p><u>pink flower</u></p>
                 </div>
 
                 <div class="div-1">
                     <div class="feature-img-2">
-                        <img src="Flower Asset/pngwing 5.png" alt="">
+                        <img class="img-1" src="Flower Asset/pngwing 5.png" alt="">
                     </div>
-                    <p>pink flwoer</p>
+                    <p> <u>Bunch of Flowers</u></p>
                 </div>
 
                 <div class="div-1">
 
                     <div class="feature-img-3">
-                        <img src="Flower Asset/pngwing 7.png" alt="">
+                        <img class="img-1" src="Flower Asset/pngwing 7.png" alt="">
                     </div>
-                    <p>Yellow flower</p>
+                    <p><u>Yellow Flower</u></p>
                 </div>
             </div>
 
@@ -114,7 +114,7 @@
         </div>
         <section class="deal-section">
             <div class="deal">
-                <h2 class="deal-text">Get the latest deals</h2>
+                <h2 class="deal-text">Get The Latest Deals</h2>
                 <p>$50 for first shopping</p>
                 <form action="text">
                     <label for="text">
@@ -128,7 +128,7 @@
     <!-- footer  -->
     <footer>
         <h2><span>Flower</span>Shop</h2>
-        <p>here you'll got fantastic flower, to get this flower dont forget to visti our shop</p>
+        <p>Here you'll got fantastic flowers, to get this flowers don't forget to visti our shop</p>
         <small>@2020-2023, flowershop.com All right received</small>
 
     </footer>
