extra section added

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="feature-img-1">
                         <img class="img-1" src="Flower Asset/pngwing 6.png" alt="">
                     </div>
-                    <p><u>pink flower</u></p>
+                    <p><u>Pink WaterLily</u></p>
                 </div>
 
                 <div class="div-1">
@@ -122,6 +122,34 @@
                     </label>
                     <button class="shopnow-btn">Subscribe</button>
                 </form>
+            </div>
+        </section>
+        <section class="about">
+            <div class="about-shop">
+                <h2 class="shop-title">
+                    About Our Shop
+                </h2>
+                <p>our team work dedicatedly to provide best service to our customer , here you can take take <br>
+                    advantage
+                    of return policy. security is provided to all our customers</p>
+                <div class="about-info">
+                    <div>
+                        <h3><b>Special services:-</b></h3>
+                        <p>wedding convocation decoration</p>
+                    </div>
+                    <div>
+                        <h4>Email Adress:-</h4>
+                        <p>ruhulaminjihad1234@gmail.com </p>
+                    </div>
+                    <div>
+                        <h4>Hot Line:-</h4>
+                        <p>+8801834901288</p>
+                    </div>
+                    <div>
+                        <h4>Location</h4>
+                        <p>32 Dhanmondi, dhaka</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
